[package]
name = "cockroachdb_bench"
version = "0.1.0"
authors = ["yagince <straitwalk@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "r2d2"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
r2d2 = "0.8.8"
rayon = "1.3.0"